--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 </nav>  
 
 
-<div class="container h"> Hello world</div>
+<div class="container h"> Hello world !</div>
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
 </footer>
