realy last commit

--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
             <div id="content" >
             <div id="profile"> 
                 	<div class="about">
-                    	<div class="photo-inner"><img src="" height="186" width="153" /></div>
+                    	<div class="photo-inner"><img src="kartinka.jpg" height="186" width="153" /></div>
                         <h1>BOGDAN GLOVA</h1>
                         <h3>WEB DEVELOPER</h3>
                         <p>I`m a student in TNTY on facultaiv program ingenering . My skill in programing not very big but i want up here.</p>
